# python-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  LICENSE  Makefile  README.md  cookiecutter.json  create.py  pyproject.toml  test.sh
.github/workflows/: main.yml
templates/: CONTRIBUTE.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  {name_underscore}.code-workspace
templates-update/: CONTRIBUTE.md  README.md  noxfile.py  pyproject.toml
templates-update/.github/workflows/: main.yml
templates-update/docs/: Makefile  contributing.md
templates/.github/workflows/: main.yml
templates/docs/: Makefile  conf.py  index.md  index.rst
templates/src/{name_underscore}/: __init__.py
templates/tests/: __init__.py  fixtures.py  test_basic.py  util.py
templates/{name}/: __init__.py
testdata/: LICENSE
testdata/myname/: CONTRIBUTE.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
testdata/myname/.github/workflows/: main.yml
testdata/myname/docs/: Makefile  conf.py  index.md  index.rst
testdata/myname/myname/: __init__.py
testdata/myname/src/myname/: __init__.py
testdata/myname/tests/: __init__.py  fixtures.py  test_basic.py  util.py
tests/: test_bake.py
tests/refdata/test_bake/test_default/: .cookiecutter.json  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml
tests/refdata/test_bake/test_default/docs/: api.md  index.md
tests/refdata/test_bake/test_default/src/example_project/: __init__.py
tests/refdata/test_bake/test_default/tests/: test_example.py
tests/refdata/test_bake/test_myname/: .cookiecutter.json  LICENSE  Makefile  mkdocs.yml  pyproject.toml
tests/refdata/test_bake/test_myname/docs/: api.md  index.md
tests/refdata/test_bake/test_myname/src/myname/: __init__.py
tests/refdata/test_bake/test_myname/tests/: __init__.py  test_example.py
{{cookiecutter.name}}/: .cookiecutter.json  LICENSE  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.name}}/.github/workflows/: main.yml
{{cookiecutter.name}}/docs/: api.md  contributing.md  index.md
{{cookiecutter.name}}/src/{{cookiecutter.snake_name}}/: __init__.py
{{cookiecutter.name}}/tests/: __init__.py  test_example.py
